# mario-mcp-personal

./: LICENSE  README.md  legal  legal.html  mcp_config.yaml  pyproject.toml  requirements.txt  server.py  setup.py  test_vectorstore.py
.cursor/: mcp.json
.well-known/: ai-plugin.json  openapi.yaml
data/: imagens_metadata.json
engines/: book_qa.py
mcp-chrome-extension/: manifest.json  popup.html  popup.js  style.css
resources/: blogposts.json  full_linkedin_text.txt  github.json  linkedin.json
templates/: status.html
tools/: check_books_vectorstore.py  fetch_updates.py  mario_images_tool.py  scrapper.py  update_hubiabrasil.py  update_linkedin.py  youtube_scraper.py
