[project]
name = "mario-mcp-personal"
version = "0.1.0"
description = "MCP personalizado de Mario Mayerle"
authors = [
  { name = "Mario Mayerle", email = "mario@example.com" }
]
requires-python = ">=3.10"
dependencies = [
  "flask",
  "flask-cors",
  "openai",
  "psutil",
  "requests",
  "flasgger",
  "gunicorn"
]

[project.scripts]
mcp = "server:app"  # se for um app Flask com `app = Flask(...)` em server.py

[tool.uv]
# opcional, usado para builds com uv
