[project]
name = "mario-mcp-personal"
version = "0.1.0"
description = "MCP personalizado de Mario Mayerle"
authors = [{ name = "Mario Mayerle", email = "mario@example.com" }]
requires-python = ">=3.10"
dependencies = [
  "flask",
  "flask-cors",
  "openai",
  "psutil",
  "requests",
  "flasgger"
]

[project.scripts]
mcp = "server:app"  # ajusta para o nome do seu arquivo (ex: server.py com `app = Flask(...)`)
